--- a/arrays.html
+++ b/arrays.html
@@ -82,10 +82,10 @@
         }
 
         function tabla(){
-        let numero = prompt("Dime un numero");
+        let numero = prompt("Dime un numero del 1 al 10");
 
         for(let i=0; i<=10; i++){
-            display1.innerHTML = display1.innerHTML + "<li>" +numero+ " x " +[i]+ "=" +numero*[i]+ "</li>";
+            display1.innerHTML = display1.innerHTML + "<li>" +numero+ " x " +[i]+ " = " +numero*[i]+ "</li>";
         }}
 
     </script>
